aws/verve_vpccreation/templates/vpc-ops-uk-template.json
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Resources": {
    "adsopsvpc200": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "10.200.0.0/16",
        "InstanceTenancy": "default",
        "EnableDnsSupport": "true",
        "EnableDnsHostnames": "false",
        "Tags": [
          {
            "Key": "Name",
            "Value": "vpc-ops"
          }
        ]
      }
    },
    "vpcopseip": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc"
      }
    },
    "vpcopsinternal": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.200.1.0/24",
        "AvailabilityZone": "eu-west-1a",
        "VpcId": {
          "Ref": "adsopsvpc200"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "vpc-ops-internal"
          }
        ]
      }
    },
    "vpcopsdmz": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.200.0.0/24",
        "AvailabilityZone": "eu-west-1a",
        "VpcId": {
          "Ref": "adsopsvpc200"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "vpc-ops-dmz"
          }
        ]
      }
    },
    "vpcopsgateway": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "vpc-ops-gateway"
          }
        ]
      }
    },
    "vpcopsoptionsset": {
      "Type": "AWS::EC2::DHCPOptions",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "vpc-ops-options-set"
          }
        ],
        "DomainName": "ops.eu-west-1.aws.vrv ops.eu-west-1.aws.vrv"
      }
    },
    "aclops": {
      "Type": "AWS::EC2::NetworkAcl",
      "Properties": {
        "VpcId": {
          "Ref": "adsopsvpc200"
        }
      }
    },
    "rtbopsdmz": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "adsopsvpc200"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "vpc-ops-dmz"
          }
        ]
      }
    },
    "rtbopsint": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "adsopsvpc200"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "vpc-ops-internal"
          }
        ]
      }
    },
    "eniops": {
      "Type": "AWS::EC2::NetworkInterface",
      "Properties": {
        "SubnetId": {
          "Ref": "vpcopsdmz"
        },
        "PrivateIpAddresses": [
          {
            "PrivateIpAddress": "10.200.0.20",
            "Primary": "true"
          }
        ],
        "GroupSet": [
          {
            "Ref": "sgvpcopsallowall"
          }
        ]
      }
    },
    "opsgw1": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "DisableApiTermination": "false",
        "InstanceInitiatedShutdownBehavior": "stop",
        "ImageId": "ami-89a320fa",
        "InstanceType": "t2.micro",
        "KeyName": "uk-ssh",
        "Monitoring": "false",
        "Tags": [
          {
            "Key": "role",
            "Value": "gateway"
          },
          {
            "Key": "Name",
            "Value": "ops-gw1"
          },
          {
            "Key": "host",
            "Value": "gw1"
          },
          {
            "Key": "env",
            "Value": "ops"
          }
        ],
        "NetworkInterfaces": [
          {
            "DeleteOnTermination": "true",
            "Description": "Primary network interface",
            "DeviceIndex": 0,
            "SubnetId": {
              "Ref": "vpcopsinternal"
            },
            "PrivateIpAddresses": [
              {
                "PrivateIpAddress": "10.200.1.20",
                "Primary": "true"
              }
            ],
            "GroupSet": [
              {
                "Ref": "sgvpcopsallowall"
              }
            ]
          }
        ]
      }
    },
    "sgvpcopsallowall": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "VPC allow all",
        "VpcId": {
          "Ref": "adsopsvpc200"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "vpc-ops-default"
          }
        ]
      }
    },
    "acl1": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "CidrBlock": "0.0.0.0/0",
        "Egress": "true",
        "Protocol": "-1",
        "RuleAction": "allow",
        "RuleNumber": "100",
        "NetworkAclId": {
          "Ref": "aclops"
        }
      }
    },
    "acl2": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "CidrBlock": "0.0.0.0/0",
        "Protocol": "-1",
        "RuleAction": "allow",
        "RuleNumber": "100",
        "NetworkAclId": {
          "Ref": "aclops"
        }
      }
    },
    "subnetacl1": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "NetworkAclId": {
          "Ref": "aclops"
        },
        "SubnetId": {
          "Ref": "vpcopsinternal"
        }
      }
    },
    "subnetacl2": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "NetworkAclId": {
          "Ref": "aclops"
        },
        "SubnetId": {
          "Ref": "vpcopsdmz"
        }
      }
    },
    "gw1": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": {
          "Ref": "adsopsvpc200"
        },
        "InternetGatewayId": {
          "Ref": "vpcopsgateway"
        }
      }
    },
    "subnetroute1": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "rtbopsdmz"
        },
        "SubnetId": {
          "Ref": "vpcopsdmz"
        }
      }
    },
    "subnetroute3": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "rtbopsint"
        },
        "SubnetId": {
          "Ref": "vpcopsinternal"
        }
      }
    },
    "route2": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "RouteTableId": {
          "Ref": "rtbopsdmz"
        },
        "GatewayId": {
          "Ref": "vpcopsgateway"
        }
      },
      "DependsOn": "gw1"
    },
    "route4": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "RouteTableId": {
          "Ref": "rtbopsint"
        },
        "InstanceId": {
          "Ref": "opsgw1"
        }
      }
    },
    "dchpassoc1": {
      "Type": "AWS::EC2::VPCDHCPOptionsAssociation",
      "Properties": {
        "VpcId": {
          "Ref": "adsopsvpc200"
        },
        "DhcpOptionsId": {
          "Ref": "vpcopsoptionsset"
        }
      }
    },
    "assoc1": {
      "Type": "AWS::EC2::EIPAssociation",
      "Properties": {
        "AllocationId": {
          "Fn::GetAtt" : [ "vpcopseip", "AllocationId" ]
        },
        "NetworkInterfaceId": {
          "Ref": "eniops"
        }
      }
    },
    "eniattach1": {
      "Type": "AWS::EC2::NetworkInterfaceAttachment",
      "Properties": {
        "DeleteOnTermination": "true",
        "DeviceIndex": "1",
        "NetworkInterfaceId": {
          "Ref": "eniops"
        },
        "InstanceId": {
          "Ref": "opsgw1"
        }
      },
      "DependsOn": "route4"
    },
    "ingress1": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "sgvpcopsallowall"
        },
        "IpProtocol": "-1",
        "CidrIp": "0.0.0.0/0"
      }
    },
    "egress1": {
      "Type": "AWS::EC2::SecurityGroupEgress",
      "Properties": {
        "GroupId": {
          "Ref": "sgvpcopsallowall"
        },
        "IpProtocol": "-1",
        "CidrIp": "0.0.0.0/0"
      }
    }
  },
  "Description": "Template for VPC creation",
  "Outputs": {
    "adsopsvpc200Id": {
      "Value": {
        "Ref": "adsopsvpc200"
      }
    }
  }
}
